--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-native-screens": "^2.17.1",
     "react-native-simple-radio-button": "^2.7.4",
     "react-native-switch": "^2.0.0",
-    "react-native-vector-icons": "^8.0.0"
+    "react-native-vector-icons": "^8.0.0",
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
     "@babel/core": "7.12.16",
