--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -121,7 +121,10 @@ def jscFlavor = 'org.webkit:android-jsc:+'
 def enableHermes = project.ext.react.get("enableHermes", false);
 
 android {
-    compileSdkVersion rootProject.ext.compileSdkVersion
+    aaptOptions.cruncherEnabled = false //<added>
+    aaptOptions.useNewCruncher = false    //<added>
+    buildToolsVersion "29.0.2"
+    compileSdkVersion 29 //added
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -130,10 +133,15 @@ android {
 
     defaultConfig {
         applicationId "com.polloteui"
-        minSdkVersion rootProject.ext.minSdkVersion
-        targetSdkVersion rootProject.ext.targetSdkVersion
+        minSdkVersion "21" //<changed> 21
+        targetSdkVersion "24" //<changed>24
+
+        //minSdkVersion rootProject.ext.minSdkVersion
+        //targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true //important //<added> which comes for the failed for task apptransformcalsseswithdexforrelease
+
     }
     splits {
         abi {
