--- a/package.json
+++ b/package.json
@@ -16,17 +16,20 @@
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
     "axios": "^0.21.1",
+    "i": "^0.3.6",
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-elements": "^3.2.0",
     "react-native-gesture-handler": "^1.10.1",
+    "react-native-image-picker": "^3.3.4",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.17.1",
     "react-native-simple-radio-button": "^2.7.4",
     "react-native-switch": "^2.0.0",
     "react-native-vector-icons": "^8.0.0",
-    "react-navigation-stack": "^2.10.4"
+    "react-navigation-stack": "^2.10.4",
+    "socket.io-client": "^4.1.2"
   },
   "devDependencies": {
     "@babel/core": "7.12.16",
